--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
         ui: [gui, cli]
         scripting: [lua, noscripts]
         exclude:
-          - build_type: Debug
+          - build_type: Release
             ui: gui
           - build_type: RelWithDebInfo
             ui: cli
@@ -109,3 +109,9 @@ jobs:
         export ASEPRITE=$PWD/build/bin/aseprite
         cd tests
         $XVFB bash run-tests.sh
+ - uses: actions/upload-artifact@v3
+      with:
+        name: aseprite
+        path: |
+          D:/a/aseprite/aseprite/build/bin/data
+          D:/a/aseprite/aseprite/build/bin/aseprite.exe
